# tailroute

./: .gitignore  Cargo.toml  README.md  SPEC-v1.md
.github/workflows/: ci.yml  release.yml
config/: admin_token.example  agent.toml  controller.toml
crates/tailsvc-agent/: Cargo.toml
crates/tailsvc-agent/src/: agent_state.rs  config.rs  controller_client.rs  main.rs  ready.rs  reconcile.rs  static_routes.rs  tailscale.rs
crates/tailsvc-common/: Cargo.toml
crates/tailsvc-common/src/: api.rs  auth.rs  backend.rs  error.rs  hostname.rs  labels.rs  lib.rs
crates/tailsvc-controller/: Cargo.toml
crates/tailsvc-controller/src/: api.rs  backup.rs  config.rs  lib.rs  main.rs  probe.rs  sessions.rs  state.rs
crates/tailsvc-controller/static/: admin.html
crates/tailsvc-dns/: Cargo.toml
crates/tailsvc-dns/src/: lib.rs  registry.rs  server.rs
crates/tailsvc-docker/: Cargo.toml
crates/tailsvc-docker/src/: backend_resolve.rs  candidate.rs  docker_runtime.rs  lib.rs  types.rs
crates/tailsvc-integration-tests/: Cargo.toml
crates/tailsvc-integration-tests/tests/: controller_flow.rs  dns_wire.rs  docker_whoami.rs  proxy_path.rs
crates/tailsvc-integration-tests/tests/common/: dns_udp.rs  mod.rs
crates/tailsvc-proxy/: Cargo.toml
crates/tailsvc-proxy/src/: lib.rs  proxy.rs  routes.rs
crates/tailsvc-storage/: Cargo.toml
crates/tailsvc-storage/migrations/: 001_init.sql  002_discovery.sql
crates/tailsvc-storage/src/: lib.rs  store.rs
deploy/: README.md
deploy/compose/e2e/: README.md  admin_token.example  agent-entrypoint.sh  agent.toml  compose.yaml  controller.toml  run-e2e.sh
deploy/compose/e2e/scripts/: lib.sh  run-tests-in-compose.sh
deploy/compose/primary/: README.md  admin_token.example  agent-entrypoint.sh  agent.toml  compose.yaml  controller.toml  sync-and-up.sh
deploy/docker/: Dockerfile
deploy/systemd/: install.sh  tailsvc-agent.service  tailsvc-controller.service
docs/: ACCEPTANCE-v1.md
e2e/admin-ui/: package-lock.json  package.json  playwright.config.ts
e2e/admin-ui/scripts/: start-controller.sh
e2e/admin-ui/tests/: admin-panel.spec.ts
scripts/: test-all.sh
