[workspace]
resolver = "2"
members = [
    "crates/tailsvc-common",
    "crates/tailsvc-storage",
    "crates/tailsvc-dns",
    "crates/tailsvc-proxy",
    "crates/tailsvc-docker",
    "crates/tailsvc-controller",
    "crates/tailsvc-agent",
    "crates/tailsvc-integration-tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Irvingouj/tailroute"

[workspace.dependencies]
anyhow = "1"
arc-swap = "1"
argon2 = "0.5"
async-trait = "0.1"
axum = { version = "0.8", features = ["json"] }
base64 = "0.22"
bollard = "0.18"
chrono = { version = "0.4", features = ["serde"] }
figment = { version = "0.10", features = ["env", "toml"] }
futures = "0.3"
hickory-client = "0.25"
hickory-proto = "0.25"
hickory-resolver = "0.25"
hickory-server = "0.25"
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["client", "http1", "server"] }
hyper-util = { version = "0.1", features = ["client-legacy", "server-auto", "tokio"] }
idna = "1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "migrate"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2"