[package]
name = "tailsvc-agent"
version.workspace = true
edition.workspace = true

[[bin]]
name = "tailsvc-agent"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
bollard.workspace = true
hostname = "0.4"
figment.workspace = true
futures.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
tailsvc-common = { path = "../tailsvc-common" }
tailsvc-docker = { path = "../tailsvc-docker" }
tailsvc-proxy = { path = "../tailsvc-proxy" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true