[package]
name = "tailsvc-common"
version.workspace = true
edition.workspace = true

[dependencies]
argon2.workspace = true
base64.workspace = true
chrono.workspace = true
idna.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
url.workspace = true

[dev-dependencies]
serde_json.workspace = true